# fastapi-sandbox

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.local.yml  pyproject.toml
.serena/: project.yml
alembic/: env.py  script.py.mako
alembic/versions/: e44aeb873c6b_create_initial_tables.py
app/: main.py
app/auth/: dependencies.py
app/auth/api/: auth_api_mapper.py  requests.py  responses.py  routers.py
app/auth/application/: service.py
app/auth/core/application/: auth_output_mapper.py  auth_service.py  inputs.py  outputs.py
app/auth/core/interface/: token_repository_port.py
app/auth/infrastructure/repository/: memory_token_repository.py  redis_token_repository.py
app/config/: database.py  logger.py  resource.py  settings.py
app/core/: config.py  database.py  exceptions.py  logger.py  responses.py  timestamp.py  transaction.py
app/core/startup/: __init__.py  database.py  lifespan.py  middleware.py  resource.py
app/shared/api/: cookie_manager.py  exception_handler.py  exceptions.py  responses.py
app/shared/core/: lifespan.py  middleware.py
app/shared/infrastructure/: base.py  security.py  transaction.py
app/users/: dependencies.py
app/users/api/: responses.py  user_api_mapper.py
app/users/core/application/: inputs.py  outputs.py  user_output_mapper.py  user_service.py
app/users/core/domain/: user.py  user_profile.py
app/users/core/interface/: user_repository_port.py
app/users/infrastructure/: models.py  user_db_mapper.py
app/users/infrastructure/repository/: postgres_user_repository.py
(+1 files in other folders)
